--- a/resources/views/form.phtml
+++ b/resources/views/form.phtml
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Contact Form</title>
-    <link rel="stylesheet" type="text/css" href="/css/bulma.css">
+    <link rel="stylesheet" type="text/css" href="/css/custom.css">
 </head>
 <body>
 <section class="hero is-fullheight is-dark is-bold">
