finished the required fields and messages

--- a/resources/views/form.phtml
+++ b/resources/views/form.phtml
@@ -16,17 +16,17 @@
                     <h1 class="title has-text-centered">Contact Us</h1>
                     <form action="/send" method="post" id="form">
                         <div class="box">
-                            <label class="label">Name</label>
+                            <label class="label">Name <small>*</small></label>
                             <p class="control">
                                 <input class="input" name="name" type="text" placeholder="Name">
                             </p>
 
-                            <label class="label">Email</label>
+                            <label class="label">Email <small>*</small></label>
                             <p class="control">
                                 <input class="input" name="email" type="text" placeholder="foo@example.zew">
                             </p>
 
-                            <label class="label">Message</label>
+                            <label class="label">Message <small>*</small></label>
                             <p class="control">
                                 <textarea name="message" class="textarea"
                                           placeholder="Write here your message"></textarea>
